--- a/sitemap.html
+++ b/sitemap.html
@@ -76,6 +76,16 @@
 
 							<li role="none"><a href="/html/lesson_plans.html"><span id="lesson_plans">Lesson Plans</span></a>
 								<ol>
+									<li><a href="/html/lesson_plans/east_asia_transimperial_introduction.html">Transimperial Networks and East Asia</a>
+										<ol>
+											<li><a href="/html/lesson_plans/east_asia_psychoactive_revolution.html">Psychoactive Revolution and Transnational Networks</a></li>
+											<li><a href="/html/lesson_plans/east_asia_japanese_aesthetics.html">Japanese Aesthetics: British Perceptions and Japanese Responses</a></li>
+											<li><a href="/html/lesson_plans/east_asia_visualizing_korea.html">Visualizing Korea</a></li>
+											<li><a href="/html/lesson_plans/east_asia_chinese_migration.html">Chinese Migration and Forms of Global Circulation</a></li>
+											<li><a href="/html/lesson_plans/east_asia_victorian_realism.html">Victorian Realism, China, and the Politics of Form</a></li>
+										</ol>
+									</li>
+
 									<li><a href="/html/lesson_plans/seacole_caribbean_introduction.html">Mary Seacole and the Caribbean: Cluster Introduction</a>
 										<ol>
 											<li><a href="/html/lesson_plans/seacole_decentering_britishness.html">Decentering Britishness</a></li>
