--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -76,6 +76,7 @@
 							<li><strong>Anne Feuerstein</strong> (University of Hawai'i-Mānoa)</li>
 							<li><strong>Melissa Free</strong> (Arizona State University)</li>
 							<li><strong>Elaine Freedgood</strong> (New York University)</li>
+							<li><strong>Menglu Gao</strong> (University of Denver)</li>
 							<li><strong>Jennifer Hayward</strong> (College of Wooster)</li>
 							<li><strong>Amy Kahrmann Huseby</strong> (Florida International University)</li>
 							<li><strong>Priyanka Anne Jacob</strong> (Loyola University Chicago)</li>
@@ -83,16 +84,20 @@
 							<li><strong>Cherrie Kwok</strong> (University of Virginia)</li>
 							<li><strong>Ji Eun Lee</strong> (Sungkyunkwan University)</li>
 							<li><strong>Margaret Linley</strong> (Simon Fraser University)</li>
+							<li><strong>Waiyee Loh</strong> (Kanagawa University)</li>
 							<li><strong>Tricia Lootens</strong> (University of Georgia)</li>
 							<li><strong>Shantanu Majee</strong> (Techno India University)</li>
 							<li><strong>Indu Ohri</strong> (University of Virginia)</li>
+							<li><strong>Hyungji Park</strong> (Yonsei University)</li>
 							<li><strong>Jacob Romanow</strong> (Bryn Mawr College)</li>
 							<li><strong>Jessie Reeder</strong> (Binghamton University)</li>
 							<li><strong>Jason Rudy</strong> (University of Maryland, College Park)</li>
 							<li><strong>Anne Schwan</strong> (Edinburgh Napier University)</li>
 							<li><strong>Breanna Simpson</strong> (York University)</li>
+							<li><strong>Jessica R. Valdez</strong> (University of East Anglia)</li>
 							<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
 							<li><strong>Adah Wisnicki</strong> (Prairie Hill Learning Center)</li>
+							<li><strong>Rae X. Yan</strong> (University of Florida)</li>
 						</ul>
 					</section>
 
