--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -339,14 +339,7 @@
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
 		
-		<style>
-			.content main aside.bennett-coverley{
-				text-align: center;
-			}
-			.content main aside.bennett-coverley div{
-				display: inline-block;
-			}
-		</style>
+		<style>.content main aside.bennett-coverley{text-align:center}.content main aside.bennett-coverley div{display:inline-block}</style>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script>
 			// Adapted from https://stackoverflow.com/a/31837264
