--- a/html/lesson_plans/africa_southern_africa.html
+++ b/html/lesson_plans/africa_southern_africa.html
@@ -207,9 +207,7 @@
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
 		
-		<style>
-			h2.fit{width:min-content}@media only screen and (min-width: 400px){h2.fit{width:fit-content}}
-		</style>
+		<style>h2.fit{width:min-content}@media only screen and (min-width: 400px){h2.fit{width:fit-content}}</style>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script>
 			// Adapted from https://stackoverflow.com/a/31837264
