move nav fallback into data-include nav

--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -27,14 +27,14 @@
 	<body class="essay">
 		<div class="text-container content about values">
 
-			<div data-include="nav"></div>
-
-			<nav id="navFB">
-				<ul role="menubar" aria-label="Site sections">
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-					<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
-				</ul>
-			</nav>
+			<div data-include="nav">
+				<nav id="navFB">
+					<ul role="menubar" aria-label="Site sections">
+						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
+						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+					</ul>
+				</nav>
+			</div>
 
 			<header id="header"></header>
 
