add external link label

--- a/html/about/call_for_assistant_editors_2022.html
+++ b/html/about/call_for_assistant_editors_2022.html
@@ -58,7 +58,7 @@
           <section aria-labelledby="caption">
             <h3 id="caption">Tile/Header Image Caption</h3>
 
-            <p>Anonymous Navajo (Diné) Artist. <a href="https://www.artic.edu/artworks/22380/blanket">Blanket</a>. [1880-1899]. Art Institute of Chicago, Chicago, 1964.1135. Gift of Mrs. William Bross Lloyd. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our recent <a href="/html/about/call_for_assessments_2022.html">Call for Assessments (2022)</a> and <a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Cluster (Open)</a> pages allude to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
+            <p>Anonymous Navajo (Diné) Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/22380/blanket">Blanket</a>. [1880-1899]. Art Institute of Chicago, Chicago, 1964.1135. Gift of Mrs. William Bross Lloyd. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our recent <a href="/html/about/call_for_assessments_2022.html">Call for Assessments (2022)</a> and <a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Cluster (Open)</a> pages allude to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
           </section>
 
           					
