--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -91,7 +91,7 @@
 					<section aria-labelledby="works-cited">
 						<h3 id="works-cited">Works Cited</h3>
 
-						<p>Chatterjee, Ronjaunee, et al. “<a href="https://doi.org/10.2979/victorianstudies.62.3.01">Introduction: Undisciplining Victorian Studies</a>.” <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369–91.</p>
+						<p>Chatterjee, Ronjaunee, et al. “<a aria-label="External Link" href="https://doi.org/10.2979/victorianstudies.62.3.01">Introduction: Undisciplining Victorian Studies</a>.” <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369–91.</p>
 
 						<p>Sharpe, Christina. <em>In the Wake: On Blackness and Being</em>. Duke University Press, 2016.</p>
 					</section>
@@ -99,7 +99,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Anonymous Asante Artist. <a href="https://africa.si.edu/collections/objects/8582/wrapper?ctx=65a356ddbacf3a7d0a21a8f266e1d934898d46eb&idx=0">Wrapper</a>. Mid-late nineteenth century. Textile and Fiber Arts, Smithsonian National Museum of African Art, 83-3-8. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act. Adinkra cloths were historically worn by Asante royalty during times of mourning. This one was worn by Asantehene Agyeman Prempeh I, the thirteenth king of the Asante state, when he was finally deposed by the British in January 1896 after years of resistance.</p>
+						<p>Anonymous Asante Artist. <a aria-label="External Link" href="https://africa.si.edu/collections/objects/8582/wrapper?ctx=65a356ddbacf3a7d0a21a8f266e1d934898d46eb&idx=0">Wrapper</a>. Mid-late nineteenth century. Textile and Fiber Arts, Smithsonian National Museum of African Art, 83-3-8. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act. Adinkra cloths were historically worn by Asante royalty during times of mourning. This one was worn by Asantehene Agyeman Prempeh I, the thirteenth king of the Asante state, when he was finally deposed by the British in January 1896 after years of resistance.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
