--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -466,13 +466,13 @@
               </section>
             </section> 
 
-            <p><em>Note:</em> Users interested in seeing an animated, horizontally-oriented version of our timeline may wish to consult the <a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650">version</a> we created through Knightlab's <em>TimelineJS</em>. However, users should also note that the Knightlab timeline is on an external site and is not coded for visual accessibility.</p>
+            <p><em>Note:</em> Users interested in seeing an animated, horizontally-oriented version of our timeline may wish to consult the <a aria-label="External Link" href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650">version</a> we created through Knightlab's <em>TimelineJS</em>. However, users should also note that the Knightlab timeline is on an external site and is not coded for visual accessibility.</p>
           </section>
 
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-            <p>Kim Sahyung, et al. <a href="https://commons.wikimedia.org/wiki/File:GeneralMapOfDistancesAndHistoricCapitals.jpg"><em>Kangnido</em></a>. 1402. <em>Wikimedia Commons</em>, <em>Dschingis Khan und seine Erben</em> (exhibition catalogue), München 2005, p. 336–37. </p>
+            <p>Kim Sahyung, et al. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:GeneralMapOfDistancesAndHistoricCapitals.jpg"><em>Kangnido</em></a>. 1402. <em>Wikimedia Commons</em>, <em>Dschingis Khan und seine Erben</em> (exhibition catalogue), München 2005, p. 336–37. </p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
