--- a/html/lesson_plans/east_asia_transimperial_introduction.html
+++ b/html/lesson_plans/east_asia_transimperial_introduction.html
@@ -103,7 +103,7 @@
 					<section aria-labelledby="works-cited">
 						<h3 id="works-cited">Works Cited</h3>
 
-						<p>Chatterjee, Ronjaunee, et al. “<a href="https://doi.org/10.2979/victorianstudies.62.3.01">Introduction: Undisciplining Victorian Studies</a>.” <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369–91.</p>
+						<p>Chatterjee, Ronjaunee, et al. “<a aria-label="External Link" href="https://doi.org/10.2979/victorianstudies.62.3.01">Introduction: Undisciplining Victorian Studies</a>.” <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369–91.</p>
 
 						<p>Lowe, Lisa. <em>The Intimacies of Four Continents</em>. Duke University Press, 2015.</p>
 					</section>
