--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -101,7 +101,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Tile/Header Image Caption</h3>
 
-						<p><a href="https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/">Kingston from Harbor</a>. 1891. MonoVisions Black & White Photography Magazine. Public domain.</p>
+						<p><a aria-label="External Link" href="https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/">Kingston from Harbor</a>. 1891. MonoVisions Black & White Photography Magazine. Public domain.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
