--- a/html/syllabi/race_slavery_empire.html
+++ b/html/syllabi/race_slavery_empire.html
@@ -99,9 +99,9 @@
 					<section aria-labelledby="works-cited">
 						<h3 id="works-cited">Works Cited</h3>
 
-						<p>Chatterjee, Ronjaunee, et al. “<a href="https://doi.org/10.2979/victorianstudies.62.3.01">Introduction: Undisciplining Victorian Studies</a>.” <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369–91.</p>
+						<p>Chatterjee, Ronjaunee, et al. “<a aria-label="External Link" href="https://doi.org/10.2979/victorianstudies.62.3.01">Introduction: Undisciplining Victorian Studies</a>.” <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369–91.</p>
 
-						<p>Hartman, Saidiya. “<a href="https://doi.org/10.1215/-12-2-1">Venus in Two Acts</a>.” <em>Small Axe</em>, vol. 12, no. 2, June 2008, pp. 1–14.</p>
+						<p>Hartman, Saidiya. “<a aria-label="External Link" href="https://doi.org/10.1215/-12-2-1">Venus in Two Acts</a>.” <em>Small Axe</em>, vol. 12, no. 2, June 2008, pp. 1–14.</p>
 
 						<p>Jackson, Zakiyyah Iman. <em>Becoming Human: Matter and Meaning in an Antiblack World</em>. New York University Press, 2020.</p>
 
@@ -109,7 +109,7 @@
 
 						<p>King, Tiffany Lethabo, and Frank Wilderson. “Staying Ready for Black Study: A Conversation.” <em>Otherwise Worlds: Against Settler Colonialism and Anti-Blackness</em>, Duke University Press, 2020, pp. 52–73.</p>
 
-						<p>McKittrick, Katherine. “<a href="https://doi.org/10.1177/1474474015612716">Diachronic Loops/Deadweight Tonnage/ Bad Made Measure</a>.” <em>Cultural Geographies</em>, vol. 23, no. 1, 2016, pp. 3–18.</p>
+						<p>McKittrick, Katherine. “<a aria-label="External Link" href="https://doi.org/10.1177/1474474015612716">Diachronic Loops/Deadweight Tonnage/ Bad Made Measure</a>.” <em>Cultural Geographies</em>, vol. 23, no. 1, 2016, pp. 3–18.</p>
 
 						<p>Sharpe, Christina. <em>In the Wake: On Blackness and Being</em>. Duke University Press, 2016.</p>
 
@@ -131,9 +131,9 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>(Left) Ramsay, Allan. “<a href="https://commons.wikimedia.org/wiki/File:Portrait_of_an_African.jpg">Portrait of an African</a>” [Ignatius Sancho Aka Olaudah Equiano]. <em>Wikimedia Common</em>, 1757. Royal Albert Memorial Museum, 14/1943. Public domain.</p>
+						<p>(Left) Ramsay, Allan. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Portrait_of_an_African.jpg">Portrait of an African</a>” [Ignatius Sancho Aka Olaudah Equiano]. <em>Wikimedia Common</em>, 1757. Royal Albert Memorial Museum, 14/1943. Public domain.</p>
 							
-						<p>(Right) Silvy, Camille. <a href="https://www.npg.org.uk/collections/search/portrait/mw86361/Sarah-Forbes-Bonetta-Sarah-Davies?LinkID=mp63230&role=sit&rNo=1https://www.npg.org.uk/collections/search/portrait/mw86361/Sarah-Forbes-Bonetta-Sarah-Davies?LinkID=mp63230&role=sit&rNo=1">Sarah Forbes Bonetta (Sarah Davies)</a>. 15 Sept. 1862. National Portrait Gallery, Photographs Collection, NPG Ax61384. Copyright National Portrait Gallery. Academic license for academic and non-commercial use.</p>
+						<p>(Right) Silvy, Camille. <a aria-label="External Link" href="https://www.npg.org.uk/collections/search/portrait/mw86361/Sarah-Forbes-Bonetta-Sarah-Davies?LinkID=mp63230&role=sit&rNo=1https://www.npg.org.uk/collections/search/portrait/mw86361/Sarah-Forbes-Bonetta-Sarah-Davies?LinkID=mp63230&role=sit&rNo=1">Sarah Forbes Bonetta (Sarah Davies)</a>. 15 Sept. 1862. National Portrait Gallery, Photographs Collection, NPG Ax61384. Copyright National Portrait Gallery. Academic license for academic and non-commercial use.</p>
 					</section>
 					
 					<section class="smaller" aria-labelledby="citation">
