--- a/html/syllabi/victorian_human.html
+++ b/html/syllabi/victorian_human.html
@@ -101,9 +101,9 @@
 					<section aria-labelledby="works-cited">
 						<h3 id="works-cited">Works Cited</h3>
 						
-						<p>Banerjee, Sukanya. “<a href="https://doi.org/10.1017/S1060150318001195">Transimperial</a>.” <em>Victorian Literature and Culture</em>, vol. 46, no. 3–4, 2018, pp. 925–28.</p>
+						<p>Banerjee, Sukanya. “<a aria-label="External Link" href="https://doi.org/10.1017/S1060150318001195">Transimperial</a>.” <em>Victorian Literature and Culture</em>, vol. 46, no. 3–4, 2018, pp. 925–28.</p>
 
-						<p>Wynter, Sylvia. “<a href="https://doi.org/10.1353/ncr.2004.0015">Unsettling the Coloniality of Being/Power/Truth/Freedom: Towards the Human, After Man, Its Overrepresentation – An Argument</a>.” <em>The New Centennial Review</em>, vol. 3, no. 3, 2003, pp. 257–337.</p>
+						<p>Wynter, Sylvia. “<a aria-label="External Link" href="https://doi.org/10.1353/ncr.2004.0015">Unsettling the Coloniality of Being/Power/Truth/Freedom: Towards the Human, After Man, Its Overrepresentation – An Argument</a>.” <em>The New Centennial Review</em>, vol. 3, no. 3, 2003, pp. 257–337.</p>
 					</section>
 
 					<section aria-labelledby="series">
@@ -121,7 +121,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Hawkins, Benjamin Waterhouse. “<a href="https://archive.org/details/evidenceastomans63thom">Skeletons of the Gibbon. Orang. Chimpanzee. Gorilla. Man.</a>” <em>Evidence as to Man’s Place in Nature</em>, by Thomas Henry Huxley, Williams and Norgate, 1863, frontispiece. Public domain.</p>
+						<p>Hawkins, Benjamin Waterhouse. “<a aria-label="External Link" href="https://archive.org/details/evidenceastomans63thom">Skeletons of the Gibbon. Orang. Chimpanzee. Gorilla. Man.</a>” <em>Evidence as to Man’s Place in Nature</em>, by Thomas Henry Huxley, Williams and Norgate, 1863, frontispiece. Public domain.</p>
 					</section>
 					
 					<section class="smaller" aria-labelledby="citation">
