--- a/html/syllabi/women_write_empire.html
+++ b/html/syllabi/women_write_empire.html
@@ -103,7 +103,7 @@
 					<section aria-labelledby="works-cited">
 						<h3 id="works-cited">Works Cited</h3>
 
-						<p>Columbia Center for Teaching and Learning. <a href="https://ctl.columbia.edu/resources-and-technology/resources/anti-racist-pedagogy/"><em>Anti-Racist Pedagogy in Action: First Steps</em></a>. 2020.</p>
+						<p>Columbia Center for Teaching and Learning. <a aria-label="External Link" href="https://ctl.columbia.edu/resources-and-technology/resources/anti-racist-pedagogy/"><em>Anti-Racist Pedagogy in Action: First Steps</em></a>. 2020.</p>
 
 						<p>Gannon, Kevin M. <em>Radical Hope: A Teaching Manifesto</em>. West Virginia University Press, 2020.</p>
 
@@ -132,9 +132,9 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>(Left) “<a href="https://archive.org/details/lifelettersoftor00duttuoft">Toru Dutt</a>.” <em>Life and Letters of Toru Dutt</em>, by Toru Dutt and Harihar Das, Humphrey Milford; Oxford University Press, 1921, frontispiece.</p>
+						<p>(Left) “<a aria-label="External Link" href="https://archive.org/details/lifelettersoftor00duttuoft">Toru Dutt</a>.” <em>Life and Letters of Toru Dutt</em>, by Toru Dutt and Harihar Das, Humphrey Milford; Oxford University Press, 1921, frontispiece.</p>
 						
-						<p>(Right) Gutekunst, Frederick. “<a href="https://archive.org/details/highcastehinduwo00ramaiala/page/n5/mode/2up">Pandita Ramabai Sarasvati</a>.” <em>The High-Caste Hindu Woman</em>, by Pandita Ramabai Sarasvati, Press of The Jas B. Rodgers Printing Co., 1887, frontispiece.</p>		
+						<p>(Right) Gutekunst, Frederick. “<a aria-label="External Link" href="https://archive.org/details/highcastehinduwo00ramaiala/page/n5/mode/2up">Pandita Ramabai Sarasvati</a>.” <em>The High-Caste Hindu Woman</em>, by Pandita Ramabai Sarasvati, Press of The Jas B. Rodgers Printing Co., 1887, frontispiece.</p>		
 					</section>
 					
 					<section class="smaller" aria-labelledby="citation">
