--- a/html/zoomcasts/brice-hayward-reeder.html
+++ b/html/zoomcasts/brice-hayward-reeder.html
@@ -75,7 +75,7 @@
 
 				<summary aria-labelledby="overview">
 					<h3 id="overview">Zoomcast Overview</h3>
-					<p>Ryan D. Fong speaks with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder, the three creators of <a href="http://anglophonechile.org/">Anglophone Chile</a>. They discuss not only what it means to bring Chile, specifically, and Latin America, more generally, into their purview as Victorianists, but also talk about how print culture forms a crucial archive for understanding these places and their role in Britain’s “informal empire.”  Brice, Hayward, and Reeder also share the work they have done in digitizing newspapers and periodicals for their website as well as in writing the short essays provided to help instructors place these print materials in appropriate contexts.</p>
+					<p>Ryan D. Fong speaks with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder, the three creators of <a aria-label="External Link" href="http://anglophonechile.org/">Anglophone Chile</a>. They discuss not only what it means to bring Chile, specifically, and Latin America, more generally, into their purview as Victorianists, but also talk about how print culture forms a crucial archive for understanding these places and their role in Britain’s “informal empire.”  Brice, Hayward, and Reeder also share the work they have done in digitizing newspapers and periodicals for their website as well as in writing the short essays provided to help instructors place these print materials in appropriate contexts.</p>
 				</summary>
 
 				<section aria-labelledby="series">
