--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -123,7 +123,7 @@
 							<section aria-labelledby="primary-1">
 								<h5 id="primary-1">Primary Source</h5>
 
-								<p>Collins, Wilkie. “Chapter III, The Second Epoch: The Story Continued by Marian Halcombe.” 1860. <a href="https://www.gutenberg.org/files/583/583-h/583-h.htm"><em>The Woman in White</em></a>, Project Gutenberg, 2008.<br/>
+								<p>Collins, Wilkie. “Chapter III, The Second Epoch: The Story Continued by Marian Halcombe.” 1860. <a aria-label="External Link" href="https://www.gutenberg.org/files/583/583-h/583-h.htm"><em>The Woman in White</em></a>, Project Gutenberg, 2008.<br/>
 									<span class="annotation">In this excerpt, Marian Halcombe uses the example of China to assert what she believes to be British values. Speaking to the Italian villain Count Fosco, she insists, “we have one unquestionable virtue in England which is wanting in China. The Chinese authorities kill thousands of innocent people on the most frivolous pretexts. We in England are free from all guilt of that kind – we commit no such dreadful crime – we abhor reckless bloodshed with all our hearts.” In response, Count Fosco offers Marian and Laura some French bon-bons from “a pretty little inlaid box,” suggesting through these objects the hypocrisy and ignorance of Marian’s claims.</span>
 								</p>
 							</section>
@@ -193,11 +193,11 @@
 								<section aria-labelledby="options-analysis">
 									<h6 id="options-analysis">Options for a virtual museum analysis</h6>
 
-									<p>Hong Kong Maritime Museum. <a href="https://artsandculture.google.com/story/7QWBMR0KAZPSLg"><em>The Dragon and the Eagle: American Traders in China, A Century of Trade from 1784 to 1900</em></a>.</p>
+									<p>Hong Kong Maritime Museum. <a aria-label="External Link" href="https://artsandculture.google.com/story/7QWBMR0KAZPSLg"><em>The Dragon and the Eagle: American Traders in China, A Century of Trade from 1784 to 1900</em></a>.</p>
 
-									<p>---. <a href="https://artsandculture.google.com/story/ywWR_tMfh7AgJg"><em>The Silver Age: Origins and Trade of Chinese Export Silver</em></a>.</p>
+									<p>---. <a aria-label="External Link" href="https://artsandculture.google.com/story/ywWR_tMfh7AgJg"><em>The Silver Age: Origins and Trade of Chinese Export Silver</em></a>.</p>
 
-									<p>V21 Artspace. <a href="https://v21artspace.com/pitt-rivers-museum"><em>Pitt Rivers Museum | Virtual Museum Tour</em></a>.</p>
+									<p>V21 Artspace. <a aria-label="External Link" href="https://v21artspace.com/pitt-rivers-museum"><em>Pitt Rivers Museum | Virtual Museum Tour</em></a>.</p>
 								</section>
 							</section>
 
@@ -225,11 +225,11 @@
 								<section aria-labelledby="primary-3">
 									<h5 id="primary-3">Primary Sources</h5>
 
-									<p><a href="https://mmis.hkpl.gov.hk///c/portal/cover?c=QF757YsWv5%2BQo3MQeLhtPeEY4n9ByiTw"><em>Hong Kong Daily Press, 1870-08-20</em></a>. 20 Aug. 1870. Multimedia Information System, Hong Kong Public Libraries, NPDP18700820. <em>In particular, see page 2.</em><br/>
+									<p><a aria-label="External Link" href="https://mmis.hkpl.gov.hk///c/portal/cover?c=QF757YsWv5%2BQo3MQeLhtPeEY4n9ByiTw"><em>Hong Kong Daily Press, 1870-08-20</em></a>. 20 Aug. 1870. Multimedia Information System, Hong Kong Public Libraries, NPDP18700820. <em>In particular, see page 2.</em><br/>
 										<span class="annotation">The second page of this issue of the <em>Hong Kong Daily Press</em> has leaders (editorials) on policing the movement of Chinese in colonial Hong Kong.</span>
 									</p>
 
-									<p>Liu, Ken. “<a href="http://strangehorizons.com/fiction/good-hunting-part-1-of-2">Good Hunting (part 1 of 2)</a>”; <a href="http://strangehorizons.com/fiction/good-hunting-part-2-of-2/">Good Hunting (part 2 of 2)</a>.” <em>Strange Horizons</em>, Oct. 2012; Nov. 2012.<br/>
+									<p>Liu, Ken. “<a aria-label="External Link" href="http://strangehorizons.com/fiction/good-hunting-part-1-of-2">Good Hunting (part 1 of 2)</a>”; <a aria-label="External Link" href="http://strangehorizons.com/fiction/good-hunting-part-2-of-2/">Good Hunting (part 2 of 2)</a>.” <em>Strange Horizons</em>, Oct. 2012; Nov. 2012.<br/>
 										<span class="annotation">Set in steampunk nineteenth-century Hong Kong, this 2012 short story is about a Chinese laborer who helps a Chinese sex worker take revenge on her British clients. It is also available as an animated short in the first season of the Netflix series, <em>Love Death + Robots</em>.</span>
 									</p>
 								</section>
@@ -261,7 +261,7 @@
 								<section aria-labelledby="primary-4">
 									<h5 id="primary-4">Primary Sources</h5>
 
-									<p>Harte, Bret. <a href="https://twain.lib.virginia.edu/roughingit/map/chiharte.html"><em>Plain Language from Truthful James</em></a>. 1870.<br/>
+									<p>Harte, Bret. <a aria-label="External Link" href="https://twain.lib.virginia.edu/roughingit/map/chiharte.html"><em>Plain Language from Truthful James</em></a>. 1870.<br/>
 										<span class="annotation">More commonly known as “The Heathen Chinee,” Harte’s poem was originally written as an ironic critique of anti-Chinese sentiment in California and the United States in the 1870s. The poem, however, ultimately fomented prejudice against Chinese immigrants to the American West. It tells the story of three gold miners cheating at cards, concluding with an attack on the Chinese character, Ah Sin.</span>
 									</p>
 
@@ -282,7 +282,7 @@
 								<section aria-labelledby="optional-primary-4">
 									<h5 id="optional-primary-4">Optional Primary Source</h5>
 
-									<p>Prince, Mary. <em><a href="https://docsouth.unc.edu/neh/prince/prince.html">Mary Prince. The History of Mary Prince, a West Indian Slave. Related by Herself. With a Supplement by the Editor. To Which Is Added, the Narrative of Asa-Asa, a Captured African</a>.</em> 1831. Documenting the American South, 2000.<br/>
+									<p>Prince, Mary. <em><a aria-label="External Link" href="https://docsouth.unc.edu/neh/prince/prince.html">Mary Prince. The History of Mary Prince, a West Indian Slave. Related by Herself. With a Supplement by the Editor. To Which Is Added, the Narrative of Asa-Asa, a Captured African</a>.</em> 1831. Documenting the American South, 2000.<br/>
 										<span class="annotation">Teaching <em>The History of Mary Prince</em> alongside Wong’s “The Chinese in Cuba” helps students reflect on composite texts and the shaping of a narrative towards specific (often white) publics. It allows them to see how Wong draws upon generic practices of slave narratives and abolitionism to advocate for intervention in Cuba.  
 											</span>
 									</p>	
@@ -372,7 +372,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Anonymous. “<a href="https://commons.wikimedia.org/wiki/File:Hong_Kong_and_Victoria_Peak_Circa_1855.jpg">Hong Kong and Victoria Peak Circa 1855.</a>” c.1855. <em>Wikimedia Commons</em>. Public domain.</p>
+						<p>Anonymous. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Hong_Kong_and_Victoria_Peak_Circa_1855.jpg">Hong Kong and Victoria Peak Circa 1855.</a>” c.1855. <em>Wikimedia Commons</em>. Public domain.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
