--- a/html/lesson_plans/east_asia_psychoactive_revolution.html
+++ b/html/lesson_plans/east_asia_psychoactive_revolution.html
@@ -116,7 +116,7 @@
 							<section aria-labelledby="primary-1">
 								<h5 id="primary-1">Primary Texts</h5>
 
-								<p>Brown, John. <a href="http://hdl.handle.net/2027/ucm.5329107947"><em>The Elements of Medicine; or, A Translation of the Elementa Medicinae Brunonis. With Large Notes, Illustrations, and Comments</em></a>. Printed for J. Johnson, 1788. <em>In particular, see chapters 2 and 3 (pp. 3–37).</em></p>
+								<p>Brown, John. <a aria-label="External Link" href="http://hdl.handle.net/2027/ucm.5329107947"><em>The Elements of Medicine; or, A Translation of the Elementa Medicinae Brunonis. With Large Notes, Illustrations, and Comments</em></a>. Printed for J. Johnson, 1788. <em>In particular, see chapters 2 and 3 (pp. 3–37).</em></p>
 
 								<p>Ghosh, Amitav. <em>Sea of Poppies</em>. Picador, 2008.</p>
 
@@ -153,13 +153,13 @@
 							<section aria-labelledby="primary-2">
 								<h5 id="primary-2">Primary Texts</h5>
 
-								<p>Fortune, Robert. <a href="https://hdl.handle.net/2027/nyp.33433082425665"><em>A Journey to the Tea Countries of China; Including Sung-Lo and the Bohea Hills; with a Short Notice of the East India Company’s Tea Plantations in the Himalaya Mountains</em></a>. John Murray, 1852. <em>In particular, see chapters 10–15 (pp. 182–271).</em></p>
+								<p>Fortune, Robert. <a aria-label="External Link" href="https://hdl.handle.net/2027/nyp.33433082425665"><em>A Journey to the Tea Countries of China; Including Sung-Lo and the Bohea Hills; with a Short Notice of the East India Company’s Tea Plantations in the Himalaya Mountains</em></a>. John Murray, 1852. <em>In particular, see chapters 10–15 (pp. 182–271).</em></p>
 
 								<p>Gaskell, Elizabeth. <em>Cranford</em>. 1853. Oxford University Press, 2011.</p>
 
-								<p>Gutzlaff, Charles. <a href="http://hdl.handle.net/2027/hvd.32044004497566"><em>Journal of Three Voyages along the Coast of China in 1831, 1832, and 1833, with Notices of Siam, Corea, and the Loo-Choo Islands</em></a>. Frederick Westley and A. H. Davis, 1834. <em>In particular, see chapters 2 and 3 of “Journal of the First Voyage” (pp. 67–152) and chapter 5 of “Journal of the Second Voyage” (pp. 276–315).</em></p>
+								<p>Gutzlaff, Charles. <a aria-label="External Link" href="http://hdl.handle.net/2027/hvd.32044004497566"><em>Journal of Three Voyages along the Coast of China in 1831, 1832, and 1833, with Notices of Siam, Corea, and the Loo-Choo Islands</em></a>. Frederick Westley and A. H. Davis, 1834. <em>In particular, see chapters 2 and 3 of “Journal of the First Voyage” (pp. 67–152) and chapter 5 of “Journal of the Second Voyage” (pp. 276–315).</em></p>
 
-								<p>Lin Zexu. “<a href="https://hdl.handle.net/2027/hvd.32044005277884">Letter to the Queen of England, from the High Imperial Commissioner Lin, and His Colleagues</a>.” <em>The Chinese Repository</em>, vol. 8, no. 10, Feb. 1840, pp. 497–503.</p>
+								<p>Lin Zexu. “<a aria-label="External Link" href="https://hdl.handle.net/2027/hvd.32044005277884">Letter to the Queen of England, from the High Imperial Commissioner Lin, and His Colleagues</a>.” <em>The Chinese Repository</em>, vol. 8, no. 10, Feb. 1840, pp. 497–503.</p>
 							</section>
 
 							<section aria-labelledby="secondary-2">
@@ -257,7 +257,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Anonymous. “<a href="https://commons.wikimedia.org/wiki/File:Destruction_of_opium_in_1839.jpg">Commissioner Lin and the Destruction of the Opium in 1839.</a>” c.1840. <em>Wikimedia Commons</em>. Public domain.</p>
+						<p>Anonymous. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Destruction_of_opium_in_1839.jpg">Commissioner Lin and the Destruction of the Opium in 1839.</a>” c.1840. <em>Wikimedia Commons</em>. Public domain.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
