--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -85,7 +85,7 @@
 
 					<section aria-labelledby="biography">
 						<h3 id="biography">Guest Biography</h3>
-						<p>Jason Rudy is a Professor of English at the University of Maryland (UMD), College Park, past president of the Northeast Victorian Studies Association, and a member of the <a href="https://historicalpoetics.com/">Historical Poetics Working Group</a>. He currently directs the <a href="http://www.english.umd.edu/academics/undergraduate/honors">English Honors program</a> at UMD. Professor Rudy serves on the advisory boards of the journals <em>Victorian Studies</em> and <em>Victorian Poetry</em> and is a General Editor for the <em>Broadview Anthology of British Literature</em>. His research focuses on nineteenth-century literature in English, especially poetry; his work is committed to thinking globally about the circulation of literature, particularly in Australia, New Zealand, Canada, and South Africa.  He is the author of <em>Imagined Homelands: British Poetry in the Colonies</em> (Johns Hopkins Press, 2017) and <em>Electric Meters: Victorian Physiological Poetics</em> (Ohio University Press, 2009).</p>
+						<p>Jason Rudy is a Professor of English at the University of Maryland (UMD), College Park, past president of the Northeast Victorian Studies Association, and a member of the <a aria-label="External Link" href="https://historicalpoetics.com/">Historical Poetics Working Group</a>. He currently directs the <a aria-label="External Link" href="http://www.english.umd.edu/academics/undergraduate/honors">English Honors program</a> at UMD. Professor Rudy serves on the advisory boards of the journals <em>Victorian Studies</em> and <em>Victorian Poetry</em> and is a General Editor for the <em>Broadview Anthology of British Literature</em>. His research focuses on nineteenth-century literature in English, especially poetry; his work is committed to thinking globally about the circulation of literature, particularly in Australia, New Zealand, Canada, and South Africa.  He is the author of <em>Imagined Homelands: British Poetry in the Colonies</em> (Johns Hopkins Press, 2017) and <em>Electric Meters: Victorian Physiological Poetics</em> (Ohio University Press, 2009).</p>
 					</section>
 
 					<summary aria-labelledby="reading">
@@ -106,7 +106,7 @@
 
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Jason Rudy.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/rudy.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
+						<p>“Zoomcast with Jason Rudy.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/rudy.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
 					</section>
 			</main>
 			
