--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<section aria-labelledby="introduction">
 					<h2 id="introduction">Introduction</h2>
 
-					<p>Welcome to <em>Undisciplining the Victorian Classroom</em>, a <a href="https://reviewsindh.pubpub.org/pub/undisciplining-victorian-classroom">peer-reviewed</a> digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens.</p>
+					<p>Welcome to <em>Undisciplining the Victorian Classroom</em>, a <a aria-label="External Link" href="https://reviewsindh.pubpub.org/pub/undisciplining-victorian-classroom">peer-reviewed</a> digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens.</p>
 
 					<p>We bring together a diverse set of individuals – permanent faculty, contingent staff, independent scholars, students – through an intentional collaboration based on radical care that responds to the renewed call for racial and social justice.</p>
 
@@ -149,20 +149,20 @@
 
 				<section class="smaller" aria-labelledby="site-code">
 					<h2 id="site-code">Site Code</h2>
-					<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The development of the site has involved considerable thought, intentionality, and consensus building. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities. The site’s minimalist aesthetic cuts down on visual clutter and supports a stress-free and navigationally-clear experience for all audiences. Visit our <a href="https://github.com/undiscipliningvc">GitHub Repo</a>.</p>
+					<p>The code for this site is adapted from the <a aria-label="External Link" href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a aria-label="External Link" href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The development of the site has involved considerable thought, intentionality, and consensus building. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities. The site’s minimalist aesthetic cuts down on visual clutter and supports a stress-free and navigationally-clear experience for all audiences. Visit our <a aria-label="External Link" href="https://github.com/undiscipliningvc">GitHub Repo</a>.</p>
 				</section>
 
 				<section class="details smaller" aria-labelledby="image-details">
 					<h2 id="image-details">Carousel Image Details</h2>
 
 						<!-- <h3>Slideshow</h3> -->
-						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103"><em>Durga Killing the Demon Mahisha</em></a>.” 1800s. Cleveland Museum of Art, Indian Art, Indian and Southeast Asian Art. CC0 “No Rights Reserved.”</p>
+						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a aria-label="External Link" href="https://clevelandart.org/art/2003.103"><em>Durga Killing the Demon Mahisha</em></a>.” 1800s. Cleveland Museum of Art, Indian Art, Indian and Southeast Asian Art. CC0 “No Rights Reserved.”</p>
 
-						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “<a href="https://archive.org/details/japaneseartistin00markuoft/page/196/mode/2up">Earl’s Court Station</a>.” <em>A Japanese Artist in London</em>, Chatto & Windus, 1910, p. 196. Public domain image.</p>
+						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “<a aria-label="External Link" href="https://archive.org/details/japaneseartistin00markuoft/page/196/mode/2up">Earl’s Court Station</a>.” <em>A Japanese Artist in London</em>, Chatto & Windus, 1910, p. 196. Public domain image.</p>
 
-						<p id="mcrae"><em>Slide #3</em>: Tommy McRae. <a href="https://archive.org/details/cu31924029909060/page/n135/mode/2up">Hunting Scene</a>. Australian Legendary Tales, by Unnamed Yuwaalaraay Informants, edited & translated by K. Langloh Parker, David Nutt; Melville, Mullen & Slade, 1896, p. 114,  Public domain image.</p>		
+						<p id="mcrae"><em>Slide #3</em>: Tommy McRae. <a aria-label="External Link" href="https://archive.org/details/cu31924029909060/page/n135/mode/2up">Hunting Scene</a>. Australian Legendary Tales, by Unnamed Yuwaalaraay Informants, edited & translated by K. Langloh Parker, David Nutt; Melville, Mullen & Slade, 1896, p. 114,  Public domain image.</p>		
 						
-						<p id="fante"><em>Slide #4</em>: Anonymous Fante Artist. <a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>, c.1910. Smithsonian Institution. National Museum of African Art, Textile and Fiber Arts, 88-9-1. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
+						<p id="fante"><em>Slide #4</em>: Anonymous Fante Artist. <a aria-label="External Link" href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>, c.1910. Smithsonian Institution. National Museum of African Art, Textile and Fiber Arts, 88-9-1. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
 				</section>
 
 				<section class="smaller" aria-labelledby="citation">
