--- a/html/syllabi/capital-l_literature.html
+++ b/html/syllabi/capital-l_literature.html
@@ -111,7 +111,7 @@
 
 						<p>Chatterjee, Ronjaunee, et al. “<a aria-label="External Link" href="https://lareviewofbooks.org/article/undisciplining-victorian-studies">Undisciplining Victorian Studies</a>.” <em>Los Angeles Review of Books</em>, 10 July 2020.</p>
 
-						<p>Lindsey N. Chappell, dev. “<a aria-label="External Link" href="/html/syllabi/capital-l_literature.html">Capital L-Literature: Intro to Grad Studies</a>.” Rachel Sagner Buurma, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022.</p>
+						<p>Lindsey N. Chappell, dev. “<a href="/html/syllabi/capital-l_literature.html">Capital L-Literature: Intro to Grad Studies</a>.” Rachel Sagner Buurma, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022.</p>
 						
 						<p>Hensley, Nathan K. “<a aria-label="External Link" href="http://www.nathankhensley.net/blog/the-norton-anthology-of-english-literature-10th-edition-volume-e-the-victorian-age-readers-comments">The Norton Anthology of English Literature, 10th Edition: Volume E, The Victorian Age. Reader’s Comments</a>.” <em>Nathan K. Hensley</em>, 21 July 2020.</p>
 						
