--- a/0_dev/removed/call-for-syllabi.html
+++ b/0_dev/removed/call-for-syllabi.html
@@ -31,7 +31,7 @@
 					
 					<p>Submissions are accepted on a rolling basis. Syllabi abstracts can be submitted directly through this <a aria-label="External Link" href="https://forms.gle/nTUMTr7E5hH5G3ZV6">Google syllabus submission form</a>. Anyone with relevant professional interests is encouraged to apply, but we especially welcome submissions from early-career scholars, contingent faculty, and those with backgrounds that are under-represented in Victorian Studies.</p>
 					
-					<p>Questions about this CFS and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to  <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a>. To be placed on the project mailing list, kindly fill out this <a aria-label="External Link" href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google mailing list form</a>.</p>
+					<p>Questions about this CFS and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to  <a aria-label="External Client" href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a>. To be placed on the project mailing list, kindly fill out this <a aria-label="External Link" href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google mailing list form</a>.</p>
 				</section> -->
 
 				<!-- <h4>Coming Soon</h4>
