--- a/html/about/call_for_assistant_editors_2022.html
+++ b/html/about/call_for_assistant_editors_2022.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap"/> 
 		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
-		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0003"/>
+		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0004"/>
 		<link rel="stylesheet" type="text/css" href="/css/content.css?=newVers_0004"/>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>  	
@@ -53,7 +53,7 @@
 
 						<p>While UVC remains an all-volunteer effort at this point and cannot offer monetary compensation, the four <a href="/html/about/founding_developers.html">Founding Developers</a> are dedicated to supporting the people in this position in other ways. We can offer mentorship around publication, research, and navigating the job market. We can also offer training in coding and website building and are happy to help make connections with our professional networks within and beyond the academy. We hope this opportunity will also be a chance for graduate students and early career scholars, especially, to develop skills that could transfer to work in the public humanities in its many forms.</p>
 
-						<p>To apply, please send your CV and a brief statement of your interest in UVC and this position to Ryan Fong (<a href="mailto:rfong@kzoo.edu">rfong@kzoo.edu</a>). Feel free to highlight any relevant experience. We will accept applications on a rolling basis, but priority will be given to those who submit by August 29.</p>
+						<p>To apply, please send your CV and a brief statement of your interest in UVC and this position to Ryan Fong (<a aria-label="External Client" href="mailto:rfong@kzoo.edu">rfong@kzoo.edu</a>). Feel free to highlight any relevant experience. We will accept applications on a rolling basis, but priority will be given to those who submit by August 29.</p>
           </section>
 
           <section aria-labelledby="caption">
