--- a/html/about/call_for_syllabi_and_syllabus_clusters.html
+++ b/html/about/call_for_syllabi_and_syllabus_clusters.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap"/> 
 		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
-		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0003"/>
+		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0004"/>
 		<link rel="stylesheet" type="text/css" href="/css/content.css?=newVers_0004"/>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>  	
@@ -67,7 +67,7 @@
 						
 						<p>We will accept proposals on a rolling basis. For those who are interested in submitting individual syllabi, please submit your syllabus proposals through <a aria-label="External Link" href="https://forms.gle/KQtEwgKPCJzWRW7FA">this form</a>. For those who are interested in submitting syllabus clusters, please submit your cluster proposals through <a aria-label="External Link" href="https://forms.gle/giaXNjDEEWVbe2Gs7">this form.</a> Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars and those with backgrounds that are under-represented in Victorian Studies.</p>
 						
-						<p>Questions about this call and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to <a href="mailto:sophia.hsu@lehman.cuny.edu">Sophia Hsu</a>. To be placed on the project mailing list, kindly fill out <a aria-label="External Link" href="https://forms.gle/dNvu9JcmVYe1CAZ49">this form</a>.</p>						
+						<p>Questions about this call and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to <a aria-label="External Client" href="mailto:sophia.hsu@lehman.cuny.edu">Sophia Hsu</a>. To be placed on the project mailing list, kindly fill out <a aria-label="External Link" href="https://forms.gle/dNvu9JcmVYe1CAZ49">this form</a>.</p>						
           </section>
 
           <section aria-labelledby="caption">
