fix broken tags

--- a/html/lesson_plans/east_asia_transimperial_introduction.html
+++ b/html/lesson_plans/east_asia_transimperial_introduction.html
@@ -65,7 +65,7 @@
 								</ol>
 							</div>
 
-							<p><strong>Cluster Timeline:</strong> <a href="/html/lesson_plans/east_asia_timeline.html">Webpage</a>
+							<p><strong>Cluster Timeline:</strong> <a href="/html/lesson_plans/east_asia_timeline.html">Webpage</a></p>
 
               <p><strong>Publication Date:</strong> 2022</p>
 						</div>
