--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -58,7 +58,7 @@
 
 							<p><strong>Cluster Title:</strong> Transimperial Networks and East Asia</p>
 
-							<p><strong>Cluster Timeline:</strong> <a href="/html/lesson_plans/east_asia_timeline.html">Webpage</a>
+							<p><strong>Cluster Timeline:</strong> <a href="/html/lesson_plans/east_asia_timeline.html">Webpage</a></p>
 
 							<p><strong>Publication Date:</strong> 2022</p>
 						</div>
@@ -102,6 +102,7 @@
 								<li>What happens to the Victorian novel in China?</li>
 							</ol>
 						</section>
+					</section>
 
           <section aria-labelledby="structure">
 						<h3 id="structure">Structure and Organization</h3>
@@ -365,6 +366,7 @@
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Rae X. Yan, lesson plan dev. “Victorian Realism, China, and the Politics of Form.” Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_victorian_realism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_victorian_realism.html</a>.</p>
 					</section>
+		
 			</main>
 			
 			<div data-include="footer"></div>
