--- a/html/lesson_plans/east_asia_japanese_aesthetics.html
+++ b/html/lesson_plans/east_asia_japanese_aesthetics.html
@@ -58,7 +58,7 @@
 
 							<p><strong>Cluster Title:</strong> Transimperial Networks and East Asia</p>
 
-							<p><strong>Cluster Timeline:</strong> <a href="/html/lesson_plans/east_asia_timeline.html">Webpage</a>
+							<p><strong>Cluster Timeline:</strong> <a href="/html/lesson_plans/east_asia_timeline.html">Webpage</a></p>
 
 							<p><strong>Publication Date:</strong> 2022</p>
 						</div>
