--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -46,13 +46,13 @@
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
-					<section aria-labelledby="introduction">
-						<h3 id="introduction">Introduction</h3>
+					<section aria-labelledby="note">
+						<h3 id="note">Note to Users</h3>
 
-						<p>This bibliography integrates the digital humanities projects and primary and seconary materials cited elsewhere on the <em>Undisciplining the Victorian Classroom</em> project site. Users are also encouraged to visit our main <a aria-label="External Link" href="https://www.zotero.org/groups/2924315/undisciplining_the_victorian_classroom/library">Zotero library</a>, which provides access to the original database entries from which the following bibliography derives.</p>
+						<p>The <em>Undisciplining the Victorian Classroom</em> bibliography integrates the primary and secondary materials cited elsewhere on our project site. Due to the scale of the bibliography, we are no longer able to maintain it on this page, but instead direct users directly to our main <a aria-label="External Link" href="https://www.zotero.org/groups/2924315/undisciplining_the_victorian_classroom/library">Zotero library</a>, which brings brings together all relevant sources.</p>
 					</section>
 
-					<section class="menu-container" aria-labelledby="menu">
+					<!-- <section class="menu-container" aria-labelledby="menu">
 						<h3 id="menu">Menu</h3>
             <ol class="menu">
 							<li><a href="#digital">Digital Projects & Collections</a></li>
@@ -685,7 +685,7 @@
 						<p>“<a aria-label="External Link" href="https://archive.org/details/lifelettersoftor00duttuoft">Toru Dutt</a>.” In <em>Life and Letters of Toru Dutt</em>, by Toru Dutt and Harihar Das, frontispiece. London; Edinburgh; Glasgow; Copenhagen; New York; Toronto; Melbourne; Cape Town; Bombay; Calcutta; Madras; Shanghai; Peking: Humphrey Milford; Oxford University Press, 1921. Public domain.</p>
 						
 						<p>Turner, Joseph Mallord William. <a aria-label="External Link" href="https://collections.mfa.org/objects/31102"><em>Slave Ship (Slavers Throwing Overboard the Dead and Dying, Typhoon Coming On)</em></a>. 1840. The Beal Gallery (Gallery 251), 99.22.</p>						
-					</section>
+					</section> -->
 
 					<section aria-labelledby="caption">
 						<h3 id="caption">Tile/Header Image Caption</h3>
