annotate scroll to top button on all pages

--- a/404.html
+++ b/404.html
@@ -63,6 +63,7 @@
 			
 			<div data-include="footer"></div>
 
+			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
 
