u unused syllabi page

--- a/0_dev/removed/call-for-syllabi.html
+++ b/0_dev/removed/call-for-syllabi.html
@@ -9,6 +9,17 @@
 					</div>
 				</div> -->
 				
+				<!-- <style>
+					#call{
+						margin-top: 2em;
+					}
+					@media only screen and (min-width: 768px){
+						#call{
+							margin-top: 3em;
+						}
+					}
+				</style> -->
+
 				<!-- <section aria-labelledby="call-for-syllabi" id="call">
 					<div class="image-wrapper">
 						<img loading="lazy" src="/img/home/uvc_0006-1170px.jpg" srcset="/img/home/uvc_0006-1170px.jpg 1170w, /img/home/uvc_0006-888px.jpg 888w, /img/home/uvc_0006-585px.jpg 585w, /img/home/uvc_0006-568px.jpg 568w, /img/home/uvc_0006-444px.jpg 444w, /img/home/uvc_0006-284px.jpg 284w" sizes="(min-width: 780px) 585px, (min-width: 740px) 650px, (min-width: 360px) 90.28vw, calc(167.5vw - 265px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous. “Dance Blanket with Diving Whale and Raven Motifs.” c.1880-c.1900, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Art Institute of Chicago, Chicago, 1961.568. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/)."/>
