u removed call for syllabi

--- a/0_dev/removed/call-for-syllabi.html
+++ b/0_dev/removed/call-for-syllabi.html
@@ -1,3 +1,69 @@
+				<!-- <style>
+					/* Also see carousel captions */
+						.image-caption{
+							text-align: center;
+							line-height: 1.2em;
+							padding: 0;
+							position: absolute;
+							right: 0;
+							bottom: 1em;
+							left: 0;
+						}
+						@media only screen and (min-width: 480px){
+							.image-caption{
+								line-height: 1.6em;
+							}
+						}
+						.image-caption p{
+							font: 16px 'Noto Serif', serif;
+							font-weight: 400;
+							margin: 0;
+							padding: 0;
+							display: inline-block;
+						}
+						@media only screen and (min-width: 320px){
+							.image-caption p{
+								line-height: inherit;
+							}
+						}
+						.image-caption p a{
+							font-size: .9em;
+						}
+						.image-caption a{
+							text-decoration: underline;
+							text-align: center;
+							color: #fff;
+							background-color: rgba(0, 0, 0, 0.65);
+							border: 2px solid transparent;
+							-webkit-border-radius: 5px;
+							-moz-border-radius: 5px;
+							border-radius: 5px;
+							margin: 0;
+							padding: 1px 6px;
+							display: inline-block;
+						}
+						.image-caption a:hover,
+						.image-caption a:focus{
+							background-color: #5378ac;
+							margin: 0;
+						}
+						.image-caption a:focus{
+							border-color: #5378ac;
+							-webkit-box-shadow: inset 0px 0px 0px 2px #fff;
+							-moz-box-shadow: inset 0px 0px 0px 2px #fff;
+							box-shadow: inset 0px 0px 0px 2px #fff;
+						}
+						.image-wrapper{
+							margin: 0 auto;
+							position: relative;
+						}
+						@media only screen and (min-width: 768px){
+							.image-wrapper{
+								width: 90%;
+							}
+						}						
+				</style>				 -->
+				
 				<!-- <div class="image-wrapper">
 					<img class="image-border" loading="lazy" src="/img/home/uvc_0005-1640px.jpg" srcset="/img/home/uvc_0005-1640px.jpg 1640w, /img/home/uvc_0005-1244px.jpg 1244w, /img/home/uvc_0005-864px.jpg 864w, /img/home/uvc_0005-622px.jpg 622w, /img/home/uvc_0005-592px.jpg 592w, /img/home/uvc_0005-432px.jpg 432w, /img/home/uvc_0005-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee. “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand). c.1905, https://collections.tepapa.govt.nz/object/417717. Museum of New Zealand | Te Papa Tongarewa, Wellington, New Zealand, Te Papa (GH007416). Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/)."/>
 					<div class="image-caption">
