--- a/html/about/call_for_syllabi_and_syllabus_clusters.html
+++ b/html/about/call_for_syllabi_and_syllabus_clusters.html
@@ -26,7 +26,7 @@
 		<div class="text-container content about">
 
 			<div data-include="nav">
-				<nav id="navFB">
+				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
 						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
