--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 					<p>Our project advocates for engaging scholarship from Black, African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies.</p>
 						
-					<p class="center italic">Read our <a href="/html/about/values_practices.html">mission statement</a> to learn more about our work.</p>
+					<p class="center"><em>Read our <a href="/html/about/values_practices.html">mission statement</a> to learn more about our work.</em></p>
 				</section>
 
 				<section class="section-tiles" aria-labelledby="main-sections">
